remove irrelevant info in plot summary

--- a/imdb_loader.ipynb
+++ b/imdb_loader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,8 @@
     "import pandas as pd\n",
     "import csv\n",
     "import gluonnlp as nlp\n",
-    "import multiprocessing as mp"
+    "import multiprocessing as mp\n",
+    "import re"
    ]
   },
   {
@@ -66,54 +67,54 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>503432</th>\n",
+       "      <th>404931</th>\n",
        "      <td>False</td>\n",
-       "      <td>tt0107362</td>\n",
+       "      <td>tt0383574</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2006-07-29</td>\n",
+       "      <td>Don't watch it!</td>\n",
+       "      <td>Its a piece of sh*t made for money and nothing...</td>\n",
+       "      <td>ur11540952</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>277015</th>\n",
+       "      <td>False</td>\n",
+       "      <td>tt0163978</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2010-06-29</td>\n",
+       "      <td>Read the novel, it's a lot better then the film</td>\n",
+       "      <td>What could have gone wrong with The Beach? It ...</td>\n",
+       "      <td>ur17571044</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41055</th>\n",
+       "      <td>False</td>\n",
+       "      <td>tt0095327</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2005-02-03</td>\n",
+       "      <td>More moving than you could ever expect</td>\n",
+       "      <td>This film is utterly emotionally draining whil...</td>\n",
+       "      <td>ur3470499</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>209702</th>\n",
+       "      <td>True</td>\n",
+       "      <td>tt1528100</td>\n",
        "      <td>9</td>\n",
-       "      <td>2016-09-04</td>\n",
-       "      <td>Waay underrated delightful entertainment...</td>\n",
-       "      <td>I'm giving it a 9, since the movie tickles you...</td>\n",
-       "      <td>ur20597848</td>\n",
+       "      <td>2014-12-28</td>\n",
+       "      <td>A MOVIE! and a rarity-a thought provoking movie</td>\n",
+       "      <td>Like the title says this is a thought provokin...</td>\n",
+       "      <td>ur15971537</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14719</th>\n",
+       "      <th>304764</th>\n",
        "      <td>False</td>\n",
-       "      <td>tt0110912</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1999-02-19</td>\n",
-       "      <td>Appropriately named, excellently crafted.</td>\n",
-       "      <td>This movie is excellent.  Why?  Most important...</td>\n",
-       "      <td>ur0220236</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>333343</th>\n",
-       "      <td>False</td>\n",
-       "      <td>tt0349205</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2004-02-16</td>\n",
-       "      <td>HILARIOUS!</td>\n",
-       "      <td>This movie is great.  There are some really fu...</td>\n",
-       "      <td>ur3110774</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>557576</th>\n",
-       "      <td>False</td>\n",
-       "      <td>tt0169547</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2000-03-04</td>\n",
-       "      <td>The best movie I've ever seen. It opened my ey...</td>\n",
-       "      <td>American Beauty is absolutely beautiful. I'm s...</td>\n",
-       "      <td>ur0471080</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>265667</th>\n",
-       "      <td>False</td>\n",
-       "      <td>tt1396484</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2017-09-20</td>\n",
-       "      <td>Wait. This was good?? (L)IT!</td>\n",
-       "      <td>So, I went and seen IT with my girlfriend and ...</td>\n",
-       "      <td>ur53564317</td>\n",
+       "      <td>tt0259711</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2003-04-08</td>\n",
+       "      <td>less than meets the eye (spoilers)</td>\n",
+       "      <td>This film is even more pretentious than most p...</td>\n",
+       "      <td>ur1303704</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -121,25 +122,25 @@
       ],
       "text/plain": [
        "        is_spoiler   movie_id  rating review_date  \\\n",
-       "503432       False  tt0107362       9  2016-09-04   \n",
-       "14719        False  tt0110912      10  1999-02-19   \n",
-       "333343       False  tt0349205      10  2004-02-16   \n",
-       "557576       False  tt0169547      10  2000-03-04   \n",
-       "265667       False  tt1396484       8  2017-09-20   \n",
+       "404931       False  tt0383574       1  2006-07-29   \n",
+       "277015       False  tt0163978       4  2010-06-29   \n",
+       "41055        False  tt0095327      10  2005-02-03   \n",
+       "209702        True  tt1528100       9  2014-12-28   \n",
+       "304764       False  tt0259711       5  2003-04-08   \n",
        "\n",
-       "                                           review_summary  \\\n",
-       "503432        Waay underrated delightful entertainment...   \n",
-       "14719           Appropriately named, excellently crafted.   \n",
-       "333343                                         HILARIOUS!   \n",
-       "557576  The best movie I've ever seen. It opened my ey...   \n",
-       "265667                       Wait. This was good?? (L)IT!   \n",
+       "                                         review_summary  \\\n",
+       "404931                                  Don't watch it!   \n",
+       "277015  Read the novel, it's a lot better then the film   \n",
+       "41055            More moving than you could ever expect   \n",
+       "209702  A MOVIE! and a rarity-a thought provoking movie   \n",
+       "304764               less than meets the eye (spoilers)   \n",
        "\n",
        "                                              review_text     user_id  \n",
-       "503432  I'm giving it a 9, since the movie tickles you...  ur20597848  \n",
-       "14719   This movie is excellent.  Why?  Most important...   ur0220236  \n",
-       "333343  This movie is great.  There are some really fu...   ur3110774  \n",
-       "557576  American Beauty is absolutely beautiful. I'm s...   ur0471080  \n",
-       "265667  So, I went and seen IT with my girlfriend and ...  ur53564317  "
+       "404931  Its a piece of sh*t made for money and nothing...  ur11540952  \n",
+       "277015  What could have gone wrong with The Beach? It ...  ur17571044  \n",
+       "41055   This film is utterly emotionally draining whil...   ur3470499  \n",
+       "209702  Like the title says this is a thought provokin...  ur15971537  \n",
+       "304764  This film is even more pretentious than most p...   ur1303704  "
       ]
      },
      "execution_count": 2,
@@ -381,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -405,76 +406,63 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>is_spoiler</th>\n",
-       "      <th>movie_id</th>\n",
-       "      <th>review_text</th>\n",
-       "      <th>plot_summary</th>\n",
+       "      <th>sentence1</th>\n",
+       "      <th>sentence2</th>\n",
+       "      <th>label</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>573380</th>\n",
+       "      <td>Once again we're plunged into the world of swo...</td>\n",
+       "      <td>Don't watch it! Its a piece of sh*t made for m...</td>\n",
        "      <td>False</td>\n",
-       "      <td>tt0107362</td>\n",
-       "      <td>Waay underrated delightful entertainment... I'...</td>\n",
-       "      <td>Young Danny Madigan is a big fan of Jack Slate...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>573381</th>\n",
+       "      <td>Garland's novel centers on a young nicotine-ad...</td>\n",
+       "      <td>Read the novel, it's a lot better then the fil...</td>\n",
        "      <td>False</td>\n",
-       "      <td>tt0110912</td>\n",
-       "      <td>Appropriately named, excellently crafted. This...</td>\n",
-       "      <td>Jules Winnfield (Samuel L. Jackson) and Vincen...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>573382</th>\n",
+       "      <td>The story of Seita and Satsuko, two young Japa...</td>\n",
+       "      <td>More moving than you could ever expect This fi...</td>\n",
        "      <td>False</td>\n",
-       "      <td>tt0349205</td>\n",
-       "      <td>HILARIOUS! This movie is great.  There are som...</td>\n",
-       "      <td>The Bakers, a family of 14, move from small-to...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>573383</th>\n",
-       "      <td>False</td>\n",
-       "      <td>tt0169547</td>\n",
-       "      <td>The best movie I've ever seen. It opened my ey...</td>\n",
-       "      <td>After his death sometime in his forty-third ye...</td>\n",
+       "      <td>Epic adventure Exodus: Gods and Kings is the s...</td>\n",
+       "      <td>A MOVIE! and a rarity-a thought provoking movi...</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>573384</th>\n",
+       "      <td>Incarcerated and charged with murder, David Aa...</td>\n",
+       "      <td>less than meets the eye (spoilers) This film i...</td>\n",
        "      <td>False</td>\n",
-       "      <td>tt1396484</td>\n",
-       "      <td>Wait. This was good?? (L)IT! So, I went and se...</td>\n",
-       "      <td>In the Town of Derry, the local kids are disap...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        is_spoiler   movie_id  \\\n",
-       "573380       False  tt0107362   \n",
-       "573381       False  tt0110912   \n",
-       "573382       False  tt0349205   \n",
-       "573383       False  tt0169547   \n",
-       "573384       False  tt1396484   \n",
+       "                                                sentence1  \\\n",
+       "573380  Once again we're plunged into the world of swo...   \n",
+       "573381  Garland's novel centers on a young nicotine-ad...   \n",
+       "573382  The story of Seita and Satsuko, two young Japa...   \n",
+       "573383  Epic adventure Exodus: Gods and Kings is the s...   \n",
+       "573384  Incarcerated and charged with murder, David Aa...   \n",
        "\n",
-       "                                              review_text  \\\n",
-       "573380  Waay underrated delightful entertainment... I'...   \n",
-       "573381  Appropriately named, excellently crafted. This...   \n",
-       "573382  HILARIOUS! This movie is great.  There are som...   \n",
-       "573383  The best movie I've ever seen. It opened my ey...   \n",
-       "573384  Wait. This was good?? (L)IT! So, I went and se...   \n",
-       "\n",
-       "                                             plot_summary  \n",
-       "573380  Young Danny Madigan is a big fan of Jack Slate...  \n",
-       "573381  Jules Winnfield (Samuel L. Jackson) and Vincen...  \n",
-       "573382  The Bakers, a family of 14, move from small-to...  \n",
-       "573383  After his death sometime in his forty-third ye...  \n",
-       "573384  In the Town of Derry, the local kids are disap...  "
+       "                                                sentence2  label  \n",
+       "573380  Don't watch it! Its a piece of sh*t made for m...  False  \n",
+       "573381  Read the novel, it's a lot better then the fil...  False  \n",
+       "573382  More moving than you could ever expect This fi...  False  \n",
+       "573383  A MOVIE! and a rarity-a thought provoking movi...   True  \n",
+       "573384  less than meets the eye (spoilers) This film i...  False  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,11 +472,31 @@
     "all_columns = [review for review in df_reviews]\n",
     "for x in columns_keep:\n",
     "    all_columns.remove(x)\n",
-    "drop_columns = all_columns\n",
-    "df_train = df_reviews.drop(columns=drop_columns)\n",
-    "df_train['review_text'] = df_reviews['review_summary']+ ' ' + df_reviews['review_text']\n",
-    "df_train = df_train.drop(columns=['review_summary'])\n",
+    "df_train = pd.DataFrame(columns=['sentence1', 'sentence2', 'label'])\n",
+    "df_train['sentence1'] = pd.Series([re.split('\\s*Written by\\s*\\n', str(plot))[0] for plot in df_reviews['plot_summary']])\n",
+    "df_train['sentence2'] = df_reviews['review_summary'] + ' ' + df_reviews['review_text']\n",
+    "df_train['label'] = df_reviews['is_spoiler']\n",
     "df_train.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Inside a snowflake exists the magical land of Whoville. In Whoville, live the Whos, an almost mutated sort of munchkinlike people. All the Whos love Christmas, yet just outside of their beloved Whoville lives the Grinch. The Grinch is a nasty creature that hates Christmas, and plots to steal it away from the Whos which he equally abhors. Yet a small child, Cindy Lou Who, decides to try befriend the Grinch.'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train['sentence1'][0]"
    ]
   },
   {
@@ -500,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +516,7 @@
      "output_type": "stream",
      "text": [
       "# of rows before dropping incomplete entries: 573385\n",
-      "# of rows after dropping incomplete entries: 573378\n"
+      "# of rows after dropping incomplete entries: 573385\n"
      ]
     },
     {
@@ -532,69 +540,63 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>is_spoiler</th>\n",
-       "      <th>movie_id</th>\n",
-       "      <th>review_text</th>\n",
-       "      <th>plot_summary</th>\n",
+       "      <th>sentence1</th>\n",
+       "      <th>sentence2</th>\n",
+       "      <th>label</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>Inside a snowflake exists the magical land of ...</td>\n",
+       "      <td>Great one but doesn't set up there with the or...</td>\n",
        "      <td>False</td>\n",
-       "      <td>tt1024648</td>\n",
-       "      <td>Slow paced but interesting story based on true...</td>\n",
-       "      <td>In 1979, the American embassy in Iran was inva...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>In an ancient time, predating the pyramids, th...</td>\n",
+       "      <td>TSK: A Mildly Amusing Romp...But No People's E...</td>\n",
        "      <td>False</td>\n",
-       "      <td>tt0914798</td>\n",
-       "      <td>An ethnic propaganda This is a very sick, sci-...</td>\n",
-       "      <td>Young Bruno lives a wealthy lifestyle in prewa...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>James Bond goes on his first ever mission as a...</td>\n",
+       "      <td>Why all the accolades? I have to tell you that...</td>\n",
        "      <td>False</td>\n",
-       "      <td>tt0265208</td>\n",
-       "      <td>The most underrated movie of all time! I first...</td>\n",
-       "      <td>18-year-old Matthew Kidman is a straight 'A' o...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>The Lost City of Z tells the incredible true s...</td>\n",
+       "      <td>Movie fell down I read this book many years ag...</td>\n",
        "      <td>False</td>\n",
-       "      <td>tt1951261</td>\n",
-       "      <td>This is a fine ending to the series if it is t...</td>\n",
-       "      <td>In the aftermath of the death of Alan's father...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>This is the tale of Harry Potter, an ordinary ...</td>\n",
+       "      <td>Gryffindor 150, Muggle Director 0 After readin...</td>\n",
        "      <td>False</td>\n",
-       "      <td>tt0118617</td>\n",
-       "      <td>One of the best! Anastasia (1997) is honestly ...</td>\n",
-       "      <td>The daughter of the last Russian Tsar, Nicolas...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   is_spoiler   movie_id                                        review_text  \\\n",
-       "0       False  tt1024648  Slow paced but interesting story based on true...   \n",
-       "1       False  tt0914798  An ethnic propaganda This is a very sick, sci-...   \n",
-       "2       False  tt0265208  The most underrated movie of all time! I first...   \n",
-       "3       False  tt1951261  This is a fine ending to the series if it is t...   \n",
-       "4       False  tt0118617  One of the best! Anastasia (1997) is honestly ...   \n",
+       "                                           sentence1  \\\n",
+       "0  Inside a snowflake exists the magical land of ...   \n",
+       "1  In an ancient time, predating the pyramids, th...   \n",
+       "2  James Bond goes on his first ever mission as a...   \n",
+       "3  The Lost City of Z tells the incredible true s...   \n",
+       "4  This is the tale of Harry Potter, an ordinary ...   \n",
        "\n",
-       "                                        plot_summary  \n",
-       "0  In 1979, the American embassy in Iran was inva...  \n",
-       "1  Young Bruno lives a wealthy lifestyle in prewa...  \n",
-       "2  18-year-old Matthew Kidman is a straight 'A' o...  \n",
-       "3  In the aftermath of the death of Alan's father...  \n",
-       "4  The daughter of the last Russian Tsar, Nicolas...  "
+       "                                           sentence2  label  \n",
+       "0  Great one but doesn't set up there with the or...  False  \n",
+       "1  TSK: A Mildly Amusing Romp...But No People's E...  False  \n",
+       "2  Why all the accolades? I have to tell you that...  False  \n",
+       "3  Movie fell down I read this book many years ag...  False  \n",
+       "4  Gryffindor 150, Muggle Director 0 After readin...  False  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +605,7 @@
     "print('# of rows before dropping incomplete entries:', df_train.shape[0])\n",
     "dt_train=df_train.dropna()\n",
     "print('# of rows after dropping incomplete entries:', df_train.shape[0])\n",
-    "df_train.to_csv('./data/train.csv', index=False)\n",
+    "df_train.to_csv('./data/imdb/train.csv', index=False)\n",
     "df_train.head()"
    ]
   }
