--- a/esim.ipynb
+++ b/esim.ipynb
@@ -187,15 +187,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done! Sequence clipping and get length Time=47.84s, #Sentences=9500\n",
-      "Done! Sequence clipping and get length Time=44.54s, #Sentences=500\n"
+      "Done! Sequence clipping and get length Time=40.99s, #Sentences=9500\n",
+      "Done! Sequence clipping and get length Time=34.85s, #Sentences=500\n"
      ]
     }
    ],
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
        " 0)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -581,15 +581,15 @@
      "output_type": "stream",
      "text": [
       "FixedBucketSampler:\n",
-      "  sample_num=9500, batch_num=136\n",
+      "  sample_num=9500, batch_num=269\n",
       "  key=[43, 63, 83, 103, 123, 143, 163, 183, 203, 223]\n",
       "  cnt=[160, 1072, 1796, 1360, 1139, 1222, 931, 547, 973, 300]\n",
-      "  batch_size=[165, 113, 85, 69, 64, 64, 64, 64, 64, 64]\n"
+      "  batch_size=[82, 56, 42, 34, 32, 32, 32, 32, 32, 32]\n"
      ]
     }
    ],
    "source": [
-    "batch_size = 64\n",
+    "batch_size = 32\n",
     "bucket_num = 10\n",
     "bucket_ratio = 0.5\n",
     "\n",
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,25 +951,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "ename": "MXNetError",
-     "evalue": "[21:08:30] c:\\jenkins\\workspace\\mxnet-tag\\mxnet\\src\\storage\\./pooled_storage_manager.h:157: cudaMalloc failed: out of memory",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mMXNetError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-22-3f359aa286e2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# train and valid\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m train_valid(train_dataloader, valid_dataloader, model, loss, \\\n\u001b[1;32m----> 3\u001b[1;33m             trainer, ctx, nepochs, class_weight=class_weight, loss_name=loss_name)\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-20-94bd8d4a43cb>\u001b[0m in \u001b[0;36mtrain_valid\u001b[1;34m(data_iter_train, data_iter_valid, model, loss, trainer, ctx, nepochs, class_weight, loss_name)\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[1;31m# train\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m         \u001b[0mis_train\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m         \u001b[0mone_epoch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata_iter_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mloss\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrainer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mctx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mis_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mepoch\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mclass_weight\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mloss_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m         \u001b[1;31m# valid\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-19-849f1cb604e5>\u001b[0m in \u001b[0;36mone_epoch\u001b[1;34m(data_iter, model, loss, trainer, ctx, is_train, epoch, class_weight, loss_name)\u001b[0m\n\u001b[0;32m     32\u001b[0m         \u001b[0mtotal_true\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbatch_true\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     33\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 34\u001b[1;33m         \u001b[0mbatch_loss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0ml\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0masscalar\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     35\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     36\u001b[0m         \u001b[0mn_batch\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\zhiming\\miniconda3\\envs\\mx\\lib\\site-packages\\mxnet\\ndarray\\ndarray.py\u001b[0m in \u001b[0;36masscalar\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   2012\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2013\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"The current array is not a scalar\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2014\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0masnumpy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2015\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2016\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\zhiming\\miniconda3\\envs\\mx\\lib\\site-packages\\mxnet\\ndarray\\ndarray.py\u001b[0m in \u001b[0;36masnumpy\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1994\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhandle\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1995\u001b[0m             \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mctypes\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata_as\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mctypes\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mc_void_p\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1996\u001b[1;33m             ctypes.c_size_t(data.size)))\n\u001b[0m\u001b[0;32m   1997\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1998\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\zhiming\\miniconda3\\envs\\mx\\lib\\site-packages\\mxnet\\base.py\u001b[0m in \u001b[0;36mcheck_call\u001b[1;34m(ret)\u001b[0m\n\u001b[0;32m    251\u001b[0m     \"\"\"\n\u001b[0;32m    252\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mret\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 253\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mMXNetError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpy_str\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_LIB\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mMXGetLastError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    254\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    255\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mMXNetError\u001b[0m: [21:08:30] c:\\jenkins\\workspace\\mxnet-tag\\mxnet\\src\\storage\\./pooled_storage_manager.h:157: cudaMalloc failed: out of memory"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch 1, learning_rate 0.00100 \n",
+      "\t train_loss 0.5620, acc_train 0.732, F1_train 0.125, \n",
+      "\t valid_loss 0.5313, acc_valid 0.718, F1_valid 0.390, \n",
+      "time 135.45 sec\n",
+      "****************************************************************************************************\n",
+      "epoch 2, learning_rate 0.00100 \n",
+      "\t train_loss 0.5395, acc_train 0.741, F1_train 0.158, \n",
+      "\t valid_loss 0.5437, acc_valid 0.732, F1_valid 0.489, \n",
+      "time 136.89 sec\n",
+      "****************************************************************************************************\n",
+      "epoch 3, learning_rate 0.00090 \n",
+      "\t train_loss 0.5151, acc_train 0.758, F1_train 0.311, \n",
+      "\t valid_loss 0.4882, acc_valid 0.788, F1_valid 0.535, \n",
+      "time 136.50 sec\n",
+      "****************************************************************************************************\n",
+      "epoch 4, learning_rate 0.00090 \n",
+      "\t train_loss 0.4997, acc_train 0.768, F1_train 0.353, \n",
+      "\t valid_loss 0.5164, acc_valid 0.734, F1_valid 0.513, \n",
+      "time 136.69 sec\n",
+      "****************************************************************************************************\n",
+      "epoch 5, learning_rate 0.00081 \n",
+      "\t train_loss 0.4860, acc_train 0.778, F1_train 0.408, \n",
+      "\t valid_loss 0.5008, acc_valid 0.776, F1_valid 0.509, \n",
+      "time 137.61 sec\n",
+      "****************************************************************************************************\n",
+      "epoch 6, learning_rate 0.00081 \n",
+      "\t train_loss 0.4653, acc_train 0.780, F1_train 0.431, \n",
+      "\t valid_loss 0.5366, acc_valid 0.716, F1_valid 0.510, \n",
+      "time 138.20 sec\n",
+      "****************************************************************************************************\n",
+      "epoch 7, learning_rate 0.00073 \n",
+      "\t train_loss 0.4498, acc_train 0.790, F1_train 0.479, \n",
+      "\t valid_loss 0.4860, acc_valid 0.766, F1_valid 0.435, \n",
+      "time 137.04 sec\n",
+      "****************************************************************************************************\n",
+      "epoch 8, learning_rate 0.00073 \n",
+      "\t train_loss 0.4327, acc_train 0.803, F1_train 0.527, \n",
+      "\t valid_loss 0.5039, acc_valid 0.740, F1_valid 0.488, \n",
+      "time 137.95 sec\n",
+      "****************************************************************************************************\n",
+      "epoch 9, learning_rate 0.00066 \n",
+      "\t train_loss 0.4000, acc_train 0.820, F1_train 0.594, \n",
+      "\t valid_loss 0.5294, acc_valid 0.730, F1_valid 0.483, \n",
+      "time 136.24 sec\n",
+      "****************************************************************************************************\n",
+      "epoch 10, learning_rate 0.00066 \n",
+      "\t train_loss 0.3805, acc_train 0.828, F1_train 0.621, \n",
+      "\t valid_loss 0.5467, acc_valid 0.724, F1_valid 0.465, \n",
+      "time 137.93 sec\n",
+      "****************************************************************************************************\n"
      ]
     }
    ],
