work on data collection use wikipedia for better plot summary

--- a/imdb_loader.ipynb
+++ b/imdb_loader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,91 +56,91 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>is_spoiler</th>\n",
-       "      <th>movie_id</th>\n",
-       "      <th>rating</th>\n",
        "      <th>review_date</th>\n",
-       "      <th>review_summary</th>\n",
-       "      <th>review_text</th>\n",
+       "      <th>movie_id</th>\n",
        "      <th>user_id</th>\n",
+       "      <th>is_spoiler</th>\n",
+       "      <th>review_text</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>review_summary</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>404931</th>\n",
+       "      <td>168708</td>\n",
+       "      <td>2012-05-20</td>\n",
+       "      <td>tt1605630</td>\n",
+       "      <td>ur4732215</td>\n",
        "      <td>False</td>\n",
-       "      <td>tt0383574</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2006-07-29</td>\n",
-       "      <td>Don't watch it!</td>\n",
-       "      <td>Its a piece of sh*t made for money and nothing...</td>\n",
-       "      <td>ur11540952</td>\n",
+       "      <td>I remember when i was just a little kid watchi...</td>\n",
+       "      <td>8</td>\n",
+       "      <td>The gang is back and im loving it!</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>277015</th>\n",
+       "      <td>511313</td>\n",
+       "      <td>1999-11-09</td>\n",
+       "      <td>tt0109707</td>\n",
+       "      <td>ur0498475</td>\n",
        "      <td>False</td>\n",
-       "      <td>tt0163978</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2010-06-29</td>\n",
-       "      <td>Read the novel, it's a lot better then the film</td>\n",
-       "      <td>What could have gone wrong with The Beach? It ...</td>\n",
-       "      <td>ur17571044</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41055</th>\n",
-       "      <td>False</td>\n",
-       "      <td>tt0095327</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2005-02-03</td>\n",
-       "      <td>More moving than you could ever expect</td>\n",
-       "      <td>This film is utterly emotionally draining whil...</td>\n",
-       "      <td>ur3470499</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>209702</th>\n",
-       "      <td>True</td>\n",
-       "      <td>tt1528100</td>\n",
+       "      <td>The director of great visual masterpieces such...</td>\n",
        "      <td>9</td>\n",
-       "      <td>2014-12-28</td>\n",
-       "      <td>A MOVIE! and a rarity-a thought provoking movie</td>\n",
-       "      <td>Like the title says this is a thought provokin...</td>\n",
-       "      <td>ur15971537</td>\n",
+       "      <td>Funny, touching, inspired, well acted Tim Burt...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>304764</th>\n",
+       "      <td>362439</td>\n",
+       "      <td>2005-05-02</td>\n",
+       "      <td>tt0349683</td>\n",
+       "      <td>ur5241654</td>\n",
        "      <td>False</td>\n",
-       "      <td>tt0259711</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2003-04-08</td>\n",
-       "      <td>less than meets the eye (spoilers)</td>\n",
-       "      <td>This film is even more pretentious than most p...</td>\n",
-       "      <td>ur1303704</td>\n",
+       "      <td>This King Arthur was the best, most realistic ...</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Best Arthur I have ever scene.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>303744</td>\n",
+       "      <td>2006-08-06</td>\n",
+       "      <td>tt0244244</td>\n",
+       "      <td>ur4555708</td>\n",
+       "      <td>False</td>\n",
+       "      <td>My head is still shaking in disbelief after kn...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Godawful ridiculous no-brain movie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>108624</td>\n",
+       "      <td>2015-08-20</td>\n",
+       "      <td>tt2193021</td>\n",
+       "      <td>ur59669062</td>\n",
+       "      <td>False</td>\n",
+       "      <td>I haven't watched a series live since literall...</td>\n",
+       "      <td>10</td>\n",
+       "      <td>I hate TV...I love this....</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        is_spoiler   movie_id  rating review_date  \\\n",
-       "404931       False  tt0383574       1  2006-07-29   \n",
-       "277015       False  tt0163978       4  2010-06-29   \n",
-       "41055        False  tt0095327      10  2005-02-03   \n",
-       "209702        True  tt1528100       9  2014-12-28   \n",
-       "304764       False  tt0259711       5  2003-04-08   \n",
+       "       review_date   movie_id     user_id  is_spoiler  \\\n",
+       "168708  2012-05-20  tt1605630   ur4732215       False   \n",
+       "511313  1999-11-09  tt0109707   ur0498475       False   \n",
+       "362439  2005-05-02  tt0349683   ur5241654       False   \n",
+       "303744  2006-08-06  tt0244244   ur4555708       False   \n",
+       "108624  2015-08-20  tt2193021  ur59669062       False   \n",
        "\n",
-       "                                         review_summary  \\\n",
-       "404931                                  Don't watch it!   \n",
-       "277015  Read the novel, it's a lot better then the film   \n",
-       "41055            More moving than you could ever expect   \n",
-       "209702  A MOVIE! and a rarity-a thought provoking movie   \n",
-       "304764               less than meets the eye (spoilers)   \n",
+       "                                              review_text  rating  \\\n",
+       "168708  I remember when i was just a little kid watchi...       8   \n",
+       "511313  The director of great visual masterpieces such...       9   \n",
+       "362439  This King Arthur was the best, most realistic ...       9   \n",
+       "303744  My head is still shaking in disbelief after kn...       1   \n",
+       "108624  I haven't watched a series live since literall...      10   \n",
        "\n",
-       "                                              review_text     user_id  \n",
-       "404931  Its a piece of sh*t made for money and nothing...  ur11540952  \n",
-       "277015  What could have gone wrong with The Beach? It ...  ur17571044  \n",
-       "41055   This film is utterly emotionally draining whil...   ur3470499  \n",
-       "209702  Like the title says this is a thought provokin...  ur15971537  \n",
-       "304764  This film is even more pretentious than most p...   ur1303704  "
+       "                                           review_summary  \n",
+       "168708                 The gang is back and im loving it!  \n",
+       "511313  Funny, touching, inspired, well acted Tim Burt...  \n",
+       "362439                     Best Arthur I have ever scene.  \n",
+       "303744                 Godawful ridiculous no-brain movie  \n",
+       "108624                        I hate TV...I love this....  "
       ]
      },
      "execution_count": 2,
@@ -626,7 +626,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
